--- a/index.html
+++ b/index.html
@@ -6,109 +6,110 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="plantBombs()">
-<table>
-    <tr>
-        <!--<td onclick="playerMove(this)" id="00">00</td>-->
-        <td onmousedown="test(event)" id="00">00</td>
-        <td onclick="playerMove(this)" id="01">01</td>
-        <td onclick="playerMove(this)" id="02">02</td>
-        <td onclick="playerMove(this)" id="03">03</td>
-        <td onclick="playerMove(this)" id="04">04</td>
-        <td onclick="playerMove(this)" id="05">05</td>
-        <td onclick="playerMove(this)" id="06">06</td>
-        <td onclick="playerMove(this)" id="07">07</td>
-        <td onclick="playerMove(this)" id="08">08</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="10">10</td>
-        <td onclick="playerMove(this)" id="11">11</td>
-        <td onclick="playerMove(this)" id="12">12</td>
-        <td onclick="playerMove(this)" id="13">13</td>
-        <td onclick="playerMove(this)" id="14">14</td>
-        <td onclick="playerMove(this)" id="15">15</td>
-        <td onclick="playerMove(this)" id="16">16</td>
-        <td onclick="playerMove(this)" id="17">17</td>
-        <td onclick="playerMove(this)" id="18">18</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="20">20</td>
-        <td onclick="playerMove(this)" id="21">21</td>
-        <td onclick="playerMove(this)" id="22">22</td>
-        <td onclick="playerMove(this)" id="23">23</td>
-        <td onclick="playerMove(this)" id="24">24</td>
-        <td onclick="playerMove(this)" id="25">25</td>
-        <td onclick="playerMove(this)" id="26">26</td>
-        <td onclick="playerMove(this)" id="27">27</td>
-        <td onclick="playerMove(this)" id="28">28</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="30">30</td>
-        <td onclick="playerMove(this)" id="31">31</td>
-        <td onclick="playerMove(this)" id="32">32</td>
-        <td onclick="playerMove(this)" id="33">33</td>
-        <td onclick="playerMove(this)" id="34">34</td>
-        <td onclick="playerMove(this)" id="35">35</td>
-        <td onclick="playerMove(this)" id="36">36</td>
-        <td onclick="playerMove(this)" id="37">37</td>
-        <td onclick="playerMove(this)" id="38">38</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="40">40</td>
-        <td onclick="playerMove(this)" id="41">41</td>
-        <td onclick="playerMove(this)" id="42">42</td>
-        <td onclick="playerMove(this)" id="43">43</td>
-        <td onclick="playerMove(this)" id="44">44</td>
-        <td onclick="playerMove(this)" id="45">45</td>
-        <td onclick="playerMove(this)" id="46">46</td>
-        <td onclick="playerMove(this)" id="47">47</td>
-        <td onclick="playerMove(this)" id="48">48</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="50">50</td>
-        <td onclick="playerMove(this)" id="51">51</td>
-        <td onclick="playerMove(this)" id="52">52</td>
-        <td onclick="playerMove(this)" id="53">53</td>
-        <td onclick="playerMove(this)" id="54">54</td>
-        <td onclick="playerMove(this)" id="55">55</td>
-        <td onclick="playerMove(this)" id="56">56</td>
-        <td onclick="playerMove(this)" id="57">57</td>
-        <td onclick="playerMove(this)" id="58">58</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="60">60</td>
-        <td onclick="playerMove(this)" id="61">61</td>
-        <td onclick="playerMove(this)" id="62">62</td>
-        <td onclick="playerMove(this)" id="63">63</td>
-        <td onclick="playerMove(this)" id="64">64</td>
-        <td onclick="playerMove(this)" id="65">65</td>
-        <td onclick="playerMove(this)" id="66">66</td>
-        <td onclick="playerMove(this)" id="67">67</td>
-        <td onclick="playerMove(this)" id="68">68</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="70">70</td>
-        <td onclick="playerMove(this)" id="71">71</td>
-        <td onclick="playerMove(this)" id="72">72</td>
-        <td onclick="playerMove(this)" id="73">73</td>
-        <td onclick="playerMove(this)" id="74">74</td>
-        <td onclick="playerMove(this)" id="75">75</td>
-        <td onclick="playerMove(this)" id="76">76</td>
-        <td onclick="playerMove(this)" id="77">77</td>
-        <td onclick="playerMove(this)" id="78">78</td>
-    </tr>
-    <tr>
-        <td onclick="playerMove(this)" id="80">80</td>
-        <td onclick="playerMove(this)" id="81">81</td>
-        <td onclick="playerMove(this)" id="82">82</td>
-        <td onclick="playerMove(this)" id="83">83</td>
-        <td onclick="playerMove(this)" id="84">84</td>
-        <td onclick="playerMove(this)" id="85">85</td>
-        <td onclick="playerMove(this)" id="86">86</td>
-        <td onclick="playerMove(this)" id="87">87</td>
-        <td onclick="playerMove(this)" id="88">88</td>
-    </tr>
-
-</table>
+<div oncontextmenu="return false">
+    <table>
+        <tr>
+            <!--<td onclick="playerMove(this)" id="00">00</td>-->
+            <td onmousedown="test(event)" id="00">00</td>
+            <td onclick="playerMove(this)" id="01">01</td>
+            <td onclick="playerMove(this)" id="02">02</td>
+            <td onclick="playerMove(this)" id="03">03</td>
+            <td onclick="playerMove(this)" id="04">04</td>
+            <td onclick="playerMove(this)" id="05">05</td>
+            <td onclick="playerMove(this)" id="06">06</td>
+            <td onclick="playerMove(this)" id="07">07</td>
+            <td onclick="playerMove(this)" id="08">08</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="10">10</td>
+            <td onclick="playerMove(this)" id="11">11</td>
+            <td onclick="playerMove(this)" id="12">12</td>
+            <td onclick="playerMove(this)" id="13">13</td>
+            <td onclick="playerMove(this)" id="14">14</td>
+            <td onclick="playerMove(this)" id="15">15</td>
+            <td onclick="playerMove(this)" id="16">16</td>
+            <td onclick="playerMove(this)" id="17">17</td>
+            <td onclick="playerMove(this)" id="18">18</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="20">20</td>
+            <td onclick="playerMove(this)" id="21">21</td>
+            <td onclick="playerMove(this)" id="22">22</td>
+            <td onclick="playerMove(this)" id="23">23</td>
+            <td onclick="playerMove(this)" id="24">24</td>
+            <td onclick="playerMove(this)" id="25">25</td>
+            <td onclick="playerMove(this)" id="26">26</td>
+            <td onclick="playerMove(this)" id="27">27</td>
+            <td onclick="playerMove(this)" id="28">28</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="30">30</td>
+            <td onclick="playerMove(this)" id="31">31</td>
+            <td onclick="playerMove(this)" id="32">32</td>
+            <td onclick="playerMove(this)" id="33">33</td>
+            <td onclick="playerMove(this)" id="34">34</td>
+            <td onclick="playerMove(this)" id="35">35</td>
+            <td onclick="playerMove(this)" id="36">36</td>
+            <td onclick="playerMove(this)" id="37">37</td>
+            <td onclick="playerMove(this)" id="38">38</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="40">40</td>
+            <td onclick="playerMove(this)" id="41">41</td>
+            <td onclick="playerMove(this)" id="42">42</td>
+            <td onclick="playerMove(this)" id="43">43</td>
+            <td onclick="playerMove(this)" id="44">44</td>
+            <td onclick="playerMove(this)" id="45">45</td>
+            <td onclick="playerMove(this)" id="46">46</td>
+            <td onclick="playerMove(this)" id="47">47</td>
+            <td onclick="playerMove(this)" id="48">48</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="50">50</td>
+            <td onclick="playerMove(this)" id="51">51</td>
+            <td onclick="playerMove(this)" id="52">52</td>
+            <td onclick="playerMove(this)" id="53">53</td>
+            <td onclick="playerMove(this)" id="54">54</td>
+            <td onclick="playerMove(this)" id="55">55</td>
+            <td onclick="playerMove(this)" id="56">56</td>
+            <td onclick="playerMove(this)" id="57">57</td>
+            <td onclick="playerMove(this)" id="58">58</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="60">60</td>
+            <td onclick="playerMove(this)" id="61">61</td>
+            <td onclick="playerMove(this)" id="62">62</td>
+            <td onclick="playerMove(this)" id="63">63</td>
+            <td onclick="playerMove(this)" id="64">64</td>
+            <td onclick="playerMove(this)" id="65">65</td>
+            <td onclick="playerMove(this)" id="66">66</td>
+            <td onclick="playerMove(this)" id="67">67</td>
+            <td onclick="playerMove(this)" id="68">68</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="70">70</td>
+            <td onclick="playerMove(this)" id="71">71</td>
+            <td onclick="playerMove(this)" id="72">72</td>
+            <td onclick="playerMove(this)" id="73">73</td>
+            <td onclick="playerMove(this)" id="74">74</td>
+            <td onclick="playerMove(this)" id="75">75</td>
+            <td onclick="playerMove(this)" id="76">76</td>
+            <td onclick="playerMove(this)" id="77">77</td>
+            <td onclick="playerMove(this)" id="78">78</td>
+        </tr>
+        <tr>
+            <td onclick="playerMove(this)" id="80">80</td>
+            <td onclick="playerMove(this)" id="81">81</td>
+            <td onclick="playerMove(this)" id="82">82</td>
+            <td onclick="playerMove(this)" id="83">83</td>
+            <td onclick="playerMove(this)" id="84">84</td>
+            <td onclick="playerMove(this)" id="85">85</td>
+            <td onclick="playerMove(this)" id="86">86</td>
+            <td onclick="playerMove(this)" id="87">87</td>
+            <td onclick="playerMove(this)" id="88">88</td>
+        </tr>
+    </table>
+</div>
 
 <button class="new-game-button" onclick="location.reload()">Start new game</button>
 
@@ -178,9 +179,9 @@
     }
 
     function test(event) {
-        if(event.button == 0) {
+        if (event.button == 0) {
         }
-        if(event.button == 2) {
+        if (event.button == 2) {
             var x = document.getElementById("00");
             x.innerHTML = "";
             var img = document.createElement('img');
