--- a/index.html
+++ b/index.html
@@ -9,103 +9,103 @@
 <div oncontextmenu="return false">
     <table>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="00">00</td>
-            <td onmousedown="playerClick(event, this)" id="01">01</td>
-            <td onmousedown="playerClick(event, this)" id="02">02</td>
-            <td onmousedown="playerClick(event, this)" id="03">03</td>
-            <td onmousedown="playerClick(event, this)" id="04">04</td>
-            <td onmousedown="playerClick(event, this)" id="05">05</td>
-            <td onmousedown="playerClick(event, this)" id="06">06</td>
-            <td onmousedown="playerClick(event, this)" id="07">07</td>
-            <td onmousedown="playerClick(event, this)" id="08">08</td>
+            <td onmousedown="playerMove(event, this)" id="00">00</td>
+            <td onmousedown="playerMove(event, this)" id="01">01</td>
+            <td onmousedown="playerMove(event, this)" id="02">02</td>
+            <td onmousedown="playerMove(event, this)" id="03">03</td>
+            <td onmousedown="playerMove(event, this)" id="04">04</td>
+            <td onmousedown="playerMove(event, this)" id="05">05</td>
+            <td onmousedown="playerMove(event, this)" id="06">06</td>
+            <td onmousedown="playerMove(event, this)" id="07">07</td>
+            <td onmousedown="playerMove(event, this)" id="08">08</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="10">10</td>
-            <td onmousedown="playerClick(event, this)" id="11">11</td>
-            <td onmousedown="playerClick(event, this)" id="12">12</td>
-            <td onmousedown="playerClick(event, this)" id="13">13</td>
-            <td onmousedown="playerClick(event, this)" id="14">14</td>
-            <td onmousedown="playerClick(event, this)" id="15">15</td>
-            <td onmousedown="playerClick(event, this)" id="16">16</td>
-            <td onmousedown="playerClick(event, this)" id="17">17</td>
-            <td onmousedown="playerClick(event, this)" id="18">18</td>
+            <td onmousedown="playerMove(event, this)" id="10">10</td>
+            <td onmousedown="playerMove(event, this)" id="11">11</td>
+            <td onmousedown="playerMove(event, this)" id="12">12</td>
+            <td onmousedown="playerMove(event, this)" id="13">13</td>
+            <td onmousedown="playerMove(event, this)" id="14">14</td>
+            <td onmousedown="playerMove(event, this)" id="15">15</td>
+            <td onmousedown="playerMove(event, this)" id="16">16</td>
+            <td onmousedown="playerMove(event, this)" id="17">17</td>
+            <td onmousedown="playerMove(event, this)" id="18">18</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="20">20</td>
-            <td onmousedown="playerClick(event, this)" id="21">21</td>
-            <td onmousedown="playerClick(event, this)" id="22">22</td>
-            <td onmousedown="playerClick(event, this)" id="23">23</td>
-            <td onmousedown="playerClick(event, this)" id="24">24</td>
-            <td onmousedown="playerClick(event, this)" id="25">25</td>
-            <td onmousedown="playerClick(event, this)" id="26">26</td>
-            <td onmousedown="playerClick(event, this)" id="27">27</td>
-            <td onmousedown="playerClick(event, this)" id="28">28</td>
+            <td onmousedown="playerMove(event, this)" id="20">20</td>
+            <td onmousedown="playerMove(event, this)" id="21">21</td>
+            <td onmousedown="playerMove(event, this)" id="22">22</td>
+            <td onmousedown="playerMove(event, this)" id="23">23</td>
+            <td onmousedown="playerMove(event, this)" id="24">24</td>
+            <td onmousedown="playerMove(event, this)" id="25">25</td>
+            <td onmousedown="playerMove(event, this)" id="26">26</td>
+            <td onmousedown="playerMove(event, this)" id="27">27</td>
+            <td onmousedown="playerMove(event, this)" id="28">28</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="30">30</td>
-            <td onmousedown="playerClick(event, this)" id="31">31</td>
-            <td onmousedown="playerClick(event, this)" id="32">32</td>
-            <td onmousedown="playerClick(event, this)" id="33">33</td>
-            <td onmousedown="playerClick(event, this)" id="34">34</td>
-            <td onmousedown="playerClick(event, this)" id="35">35</td>
-            <td onmousedown="playerClick(event, this)" id="36">36</td>
-            <td onmousedown="playerClick(event, this)" id="37">37</td>
-            <td onmousedown="playerClick(event, this)" id="38">38</td>
+            <td onmousedown="playerMove(event, this)" id="30">30</td>
+            <td onmousedown="playerMove(event, this)" id="31">31</td>
+            <td onmousedown="playerMove(event, this)" id="32">32</td>
+            <td onmousedown="playerMove(event, this)" id="33">33</td>
+            <td onmousedown="playerMove(event, this)" id="34">34</td>
+            <td onmousedown="playerMove(event, this)" id="35">35</td>
+            <td onmousedown="playerMove(event, this)" id="36">36</td>
+            <td onmousedown="playerMove(event, this)" id="37">37</td>
+            <td onmousedown="playerMove(event, this)" id="38">38</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="40">40</td>
-            <td onmousedown="playerClick(event, this)" id="41">41</td>
-            <td onmousedown="playerClick(event, this)" id="42">42</td>
-            <td onmousedown="playerClick(event, this)" id="43">43</td>
-            <td onmousedown="playerClick(event, this)" id="44">44</td>
-            <td onmousedown="playerClick(event, this)" id="45">45</td>
-            <td onmousedown="playerClick(event, this)" id="46">46</td>
-            <td onmousedown="playerClick(event, this)" id="47">47</td>
-            <td onmousedown="playerClick(event, this)" id="48">48</td>
+            <td onmousedown="playerMove(event, this)" id="40">40</td>
+            <td onmousedown="playerMove(event, this)" id="41">41</td>
+            <td onmousedown="playerMove(event, this)" id="42">42</td>
+            <td onmousedown="playerMove(event, this)" id="43">43</td>
+            <td onmousedown="playerMove(event, this)" id="44">44</td>
+            <td onmousedown="playerMove(event, this)" id="45">45</td>
+            <td onmousedown="playerMove(event, this)" id="46">46</td>
+            <td onmousedown="playerMove(event, this)" id="47">47</td>
+            <td onmousedown="playerMove(event, this)" id="48">48</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="50">50</td>
-            <td onmousedown="playerClick(event, this)" id="51">51</td>
-            <td onmousedown="playerClick(event, this)" id="52">52</td>
-            <td onmousedown="playerClick(event, this)" id="53">53</td>
-            <td onmousedown="playerClick(event, this)" id="54">54</td>
-            <td onmousedown="playerClick(event, this)" id="55">55</td>
-            <td onmousedown="playerClick(event, this)" id="56">56</td>
-            <td onmousedown="playerClick(event, this)" id="57">57</td>
-            <td onmousedown="playerClick(event, this)" id="58">58</td>
+            <td onmousedown="playerMove(event, this)" id="50">50</td>
+            <td onmousedown="playerMove(event, this)" id="51">51</td>
+            <td onmousedown="playerMove(event, this)" id="52">52</td>
+            <td onmousedown="playerMove(event, this)" id="53">53</td>
+            <td onmousedown="playerMove(event, this)" id="54">54</td>
+            <td onmousedown="playerMove(event, this)" id="55">55</td>
+            <td onmousedown="playerMove(event, this)" id="56">56</td>
+            <td onmousedown="playerMove(event, this)" id="57">57</td>
+            <td onmousedown="playerMove(event, this)" id="58">58</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="60">60</td>
-            <td onmousedown="playerClick(event, this)" id="61">61</td>
-            <td onmousedown="playerClick(event, this)" id="62">62</td>
-            <td onmousedown="playerClick(event, this)" id="63">63</td>
-            <td onmousedown="playerClick(event, this)" id="64">64</td>
-            <td onmousedown="playerClick(event, this)" id="65">65</td>
-            <td onmousedown="playerClick(event, this)" id="66">66</td>
-            <td onmousedown="playerClick(event, this)" id="67">67</td>
-            <td onmousedown="playerClick(event, this)" id="68">68</td>
+            <td onmousedown="playerMove(event, this)" id="60">60</td>
+            <td onmousedown="playerMove(event, this)" id="61">61</td>
+            <td onmousedown="playerMove(event, this)" id="62">62</td>
+            <td onmousedown="playerMove(event, this)" id="63">63</td>
+            <td onmousedown="playerMove(event, this)" id="64">64</td>
+            <td onmousedown="playerMove(event, this)" id="65">65</td>
+            <td onmousedown="playerMove(event, this)" id="66">66</td>
+            <td onmousedown="playerMove(event, this)" id="67">67</td>
+            <td onmousedown="playerMove(event, this)" id="68">68</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="70">70</td>
-            <td onmousedown="playerClick(event, this)" id="71">71</td>
-            <td onmousedown="playerClick(event, this)" id="72">72</td>
-            <td onmousedown="playerClick(event, this)" id="73">73</td>
-            <td onmousedown="playerClick(event, this)" id="74">74</td>
-            <td onmousedown="playerClick(event, this)" id="75">75</td>
-            <td onmousedown="playerClick(event, this)" id="76">76</td>
-            <td onmousedown="playerClick(event, this)" id="77">77</td>
-            <td onmousedown="playerClick(event, this)" id="78">78</td>
+            <td onmousedown="playerMove(event, this)" id="70">70</td>
+            <td onmousedown="playerMove(event, this)" id="71">71</td>
+            <td onmousedown="playerMove(event, this)" id="72">72</td>
+            <td onmousedown="playerMove(event, this)" id="73">73</td>
+            <td onmousedown="playerMove(event, this)" id="74">74</td>
+            <td onmousedown="playerMove(event, this)" id="75">75</td>
+            <td onmousedown="playerMove(event, this)" id="76">76</td>
+            <td onmousedown="playerMove(event, this)" id="77">77</td>
+            <td onmousedown="playerMove(event, this)" id="78">78</td>
         </tr>
         <tr>
-            <td onmousedown="playerClick(event, this)" id="80">80</td>
-            <td onmousedown="playerClick(event, this)" id="81">81</td>
-            <td onmousedown="playerClick(event, this)" id="82">82</td>
-            <td onmousedown="playerClick(event, this)" id="83">83</td>
-            <td onmousedown="playerClick(event, this)" id="84">84</td>
-            <td onmousedown="playerClick(event, this)" id="85">85</td>
-            <td onmousedown="playerClick(event, this)" id="86">86</td>
-            <td onmousedown="playerClick(event, this)" id="87">87</td>
-            <td onmousedown="playerClick(event, this)" id="88">88</td>
+            <td onmousedown="playerMove(event, this)" id="80">80</td>
+            <td onmousedown="playerMove(event, this)" id="81">81</td>
+            <td onmousedown="playerMove(event, this)" id="82">82</td>
+            <td onmousedown="playerMove(event, this)" id="83">83</td>
+            <td onmousedown="playerMove(event, this)" id="84">84</td>
+            <td onmousedown="playerMove(event, this)" id="85">85</td>
+            <td onmousedown="playerMove(event, this)" id="86">86</td>
+            <td onmousedown="playerMove(event, this)" id="87">87</td>
+            <td onmousedown="playerMove(event, this)" id="88">88</td>
         </tr>
     </table>
 </div>
@@ -185,30 +185,33 @@
         displayAllBombs();
     }
 
-    function playerClick(event, object) {
-        if (event.button == 0) {
-            playerMove(object);
-        }
-        if (event.button == 2) {
-
-            var x = document.getElementById(object.id.charAt(0).toString() + object.id.charAt(1).toString());
-            var img = document.createElement('img');
-            if (x.style.backgroundColor != "darkgray") {
-                if (flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)]) {
-                    img.src = "";
-                    x.appendChild(img);
-                    flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)] = false;
-                }
-                else {
-                    img.src = "flag.png";
-                    x.appendChild(img);
-                    flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)] = true;
-                }
+    function setFlag(object) {
+        var x = document.getElementById(object.id.charAt(0).toString() + object.id.charAt(1).toString());
+        var img = document.createElement('img');
+        if (x.style.backgroundColor != "darkgray") {
+            if (flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)]) {
+                x.innerHTML = "";
+                img.src = "";
+                x.appendChild(img);
+                flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)] = false;
+            }
+            else {
+                img.src = "flag.png";
+                x.appendChild(img);
+                flagsBoard[parseInt(object.id.charAt(0))][object.id.charAt(1)] = true;
             }
         }
     }
+    function playerMove(event, object) {
+        if (event.button == 0) {
+            discoverField(object);
+        }
+        if (event.button == 2) {
+            setFlag(object);
+        }
+    }
 
-    function playerMove(object) {
+    function discoverField(object) {
         if (!isGameDone) {
             var x = parseInt(object.id.charAt(0));
             var y = parseInt(object.id.charAt(1));
