--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 }
             }
         }
-        displayAllBombs();
+        //displayAllBombs();
     }
 
     function setFlag(object) {
